--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,11 @@ spring.jpa.show-sql = true
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
 #spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=msagaladaines@gmail.com
+spring.mail.password=Agness73
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
