--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,6 +20,6 @@ spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDial
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=msagaladaines@gmail.com
-spring.mail.password=Agness73
+spring.mail.password=gaas hrug ewqg zkgd
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
